{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 54,
  "lineage": "0016156a-a3c3-c24c-f69c-b6dc8ef1efeb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01317ff2fc2434e20",
            "association_id": "eipassoc-0b890834e6b274d7e",
            "domain": "vpc",
            "id": "eipalloc-01317ff2fc2434e20",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03fc1da8aa39961ce",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-20-65-57.compute-1.amazonaws.com",
            "public_ip": "52.20.65.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_mgmt-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:116106230478:instance/i-09ec153cdee2486c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ec153cdee2486c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00f2e677393cca551",
            "private_dns": "ip-10-0-7-224.ec2.internal",
            "private_ip": "10.0.7.224",
            "public_ip": "54.174.71.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-087a35ede939ae412",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e82bcc9a9233bb0",
            "tags": {
              "Name": "terraform_mgmt-server"
            },
            "tags_all": {
              "Name": "terraform_mgmt-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eaebf76f41ae90fc"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_mgmt-sg",
            "aws_subnet.terraform_mgmt-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:116106230478:instance/i-0903ac4033d857745",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0903ac4033d857745",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8d6756751ff4a9b",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_ip": "10.0.1.17",
            "public_ip": "3.81.250.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd8245cd525c330f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be4f572f588ba81c",
            "tags": {
              "Name": "terraform_web-server"
            },
            "tags_all": {
              "Name": "terraform_web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09520f027654bdec5"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_public-sg",
            "aws_subnet.terraform_public-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:internet-gateway/igw-0852968dd9c7f43ec",
            "id": "igw-0852968dd9c7f43ec",
            "owner_id": "116106230478",
            "tags": {
              "Name": "terraform_igw"
            },
            "tags_all": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116106230478:loadbalancer/app/terraform-alb/d23223f80f412139",
            "arn_suffix": "app/terraform-alb/d23223f80f412139",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-426580355.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:116106230478:loadbalancer/app/terraform-alb/d23223f80f412139",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb",
            "security_groups": [
              "sg-09520f027654bdec5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0be4f572f588ba81c"
              },
              {
                "subnet_id": "subnet-0c4e8e53a3b533b3c"
              }
            ],
            "subnets": [
              "subnet-0be4f572f588ba81c",
              "subnet-0c4e8e53a3b533b3c"
            ],
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terraform_public-sg",
            "aws_subnet.terraform_public-subnet-1",
            "aws_subnet.terraform_public-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform_alb_to_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116106230478:listener/app/terraform-alb/d23223f80f412139/19ba7a66ca6358c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:116106230478:targetgroup/terraform-lb-tg/639c7fa951eab95c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116106230478:listener/app/terraform-alb/d23223f80f412139/19ba7a66ca6358c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:116106230478:loadbalancer/app/terraform-alb/d23223f80f412139",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform_alb",
            "aws_lb_target_group.terraform_lb-tg",
            "aws_security_group.terraform_public-sg",
            "aws_subnet.terraform_public-subnet-1",
            "aws_subnet.terraform_public-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform_lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116106230478:targetgroup/terraform-lb-tg/639c7fa951eab95c",
            "arn_suffix": "targetgroup/terraform-lb-tg/639c7fa951eab95c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116106230478:targetgroup/terraform-lb-tg/639c7fa951eab95c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:116106230478:targetgroup/terraform-lb-tg/639c7fa951eab95c-20220610073615158000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:116106230478:targetgroup/terraform-lb-tg/639c7fa951eab95c",
            "target_id": "i-0903ac4033d857745"
          },
          "dependencies": [
            "aws_instance.terraform_web-server",
            "aws_lb_target_group.terraform_lb-tg",
            "aws_security_group.terraform_public-sg",
            "aws_subnet.terraform_public-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01317ff2fc2434e20",
            "connectivity_type": "public",
            "id": "nat-0a6152cf1754cb109",
            "network_interface_id": "eni-03fc1da8aa39961ce",
            "private_ip": "10.0.1.50",
            "public_ip": "52.20.65.57",
            "subnet_id": "subnet-0be4f572f588ba81c",
            "tags": {
              "Name": "terraform_nat"
            },
            "tags_all": {
              "Name": "terraform_nat"
            }
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.terraform_public-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terraform_default-nw-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:network-acl/acl-0b349a177b6cfe5dc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b349a177b6cfe5dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "116106230478",
            "subnet_ids": [
              "subnet-055fccaff87138fc4",
              "subnet-07b54c4acb1fd3c30",
              "subnet-09be2f72c70997311",
              "subnet-0be4f572f588ba81c",
              "subnet-0c4e8e53a3b533b3c",
              "subnet-0fa060b29b94f9c03"
            ],
            "tags": {
              "Name": "terraform_default-nw-acl"
            },
            "tags_all": {
              "Name": "terraform_default-nw-acl"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.terraform_private-subnet-1",
            "aws_subnet.terraform_private-subnet-2",
            "aws_subnet.terraform_public-subnet-1",
            "aws_subnet.terraform_public-subnet-2",
            "aws_subnet.terraform_trusted-subnet-1",
            "aws_subnet.terraform_trusted-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terraform_mgmt-nw-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:network-acl/acl-0ddbe483235bbd9ff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ddbe483235bbd9ff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "116106230478",
            "subnet_ids": [
              "subnet-00e82bcc9a9233bb0",
              "subnet-053cd055a8920bbb4"
            ],
            "tags": {
              "Name": "terraform_mgmt-nw-acl"
            },
            "tags_all": {
              "Name": "terraform_mgmt-nw-acl"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.terraform_mgmt-subnet-1",
            "aws_subnet.terraform_mgmt-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_mgmt-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:route-table/rtb-043583a2547f4543e",
            "id": "rtb-043583a2547f4543e",
            "owner_id": "116106230478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0852968dd9c7f43ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_mgmt-rtb"
            },
            "tags_all": {
              "Name": "terraform_mgmt-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:route-table/rtb-0b180a78b09dae796",
            "id": "rtb-0b180a78b09dae796",
            "owner_id": "116106230478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a6152cf1754cb109",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_private-rtb"
            },
            "tags_all": {
              "Name": "terraform_private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.terraform_nat",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:route-table/rtb-0b4d75483e66985a4",
            "id": "rtb-0b4d75483e66985a4",
            "owner_id": "116106230478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0852968dd9c7f43ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public-rtb"
            },
            "tags_all": {
              "Name": "terraform_public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_trusted-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:route-table/rtb-0657e061d5b0b8588",
            "id": "rtb-0657e061d5b0b8588",
            "owner_id": "116106230478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a6152cf1754cb109",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_trusted-rtb"
            },
            "tags_all": {
              "Name": "terraform_trusted-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.terraform_nat",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b66fa51e2f114c7e",
            "route_table_id": "rtb-043583a2547f4543e",
            "subnet_id": "subnet-00e82bcc9a9233bb0"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_mgmt-rtb",
            "aws_subnet.terraform_mgmt-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0283bea9bbfd52e2e",
            "route_table_id": "rtb-043583a2547f4543e",
            "subnet_id": "subnet-053cd055a8920bbb4"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_mgmt-rtb",
            "aws_subnet.terraform_mgmt-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093c966ec43f2fdcf",
            "route_table_id": "rtb-0b180a78b09dae796",
            "subnet_id": "subnet-09be2f72c70997311"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.terraform_nat",
            "aws_route_table.terraform_private-rtb",
            "aws_subnet.terraform_private-subnet-1",
            "aws_subnet.terraform_public-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf75e6ac54b6f933",
            "route_table_id": "rtb-0b180a78b09dae796",
            "subnet_id": "subnet-07b54c4acb1fd3c30"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.terraform_nat",
            "aws_route_table.terraform_private-rtb",
            "aws_subnet.terraform_private-subnet-2",
            "aws_subnet.terraform_public-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1536e47dd83e30b",
            "route_table_id": "rtb-0b4d75483e66985a4",
            "subnet_id": "subnet-0be4f572f588ba81c"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_public-rtb",
            "aws_subnet.terraform_public-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe5bb0c428972d33",
            "route_table_id": "rtb-0b4d75483e66985a4",
            "subnet_id": "subnet-0c4e8e53a3b533b3c"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_public-rtb",
            "aws_subnet.terraform_public-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trusted-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b96798c2e650af",
            "route_table_id": "rtb-0657e061d5b0b8588",
            "subnet_id": "subnet-0fa060b29b94f9c03"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.terraform_nat",
            "aws_route_table.terraform_trusted-rtb",
            "aws_subnet.terraform_public-subnet-1",
            "aws_subnet.terraform_trusted-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trusted-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067ae3d3e612f30e7",
            "route_table_id": "rtb-0657e061d5b0b8588",
            "subnet_id": "subnet-055fccaff87138fc4"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.terraform_nat",
            "aws_route_table.terraform_trusted-rtb",
            "aws_subnet.terraform_public-subnet-1",
            "aws_subnet.terraform_trusted-subnet-2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:security-group/sg-013a5e657ed7f4a66",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013a5e657ed7f4a66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09520f027654bdec5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform app security group",
            "name_prefix": "",
            "owner_id": "116106230478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_app-sg"
            },
            "tags_all": {
              "Name": "terraform_app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_public-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:security-group/sg-0e17387942e2e052f",
            "description": "Allow database inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e17387942e2e052f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013a5e657ed7f4a66",
                  "sg-0eaebf76f41ae90fc"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Terraform db security group",
            "name_prefix": "",
            "owner_id": "116106230478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_db-sg"
            },
            "tags_all": {
              "Name": "terraform_db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_mgmt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:security-group/sg-0eaebf76f41ae90fc",
            "description": "Allow mgmt inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaebf76f41ae90fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Terraform mgmt security group",
            "name_prefix": "",
            "owner_id": "116106230478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_mgmt-sg"
            },
            "tags_all": {
              "Name": "terraform_mgmt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:security-group/sg-09520f027654bdec5",
            "description": "Allow http/https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09520f027654bdec5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform public security group",
            "name_prefix": "",
            "owner_id": "116106230478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_public-sg"
            },
            "tags_all": {
              "Name": "terraform_public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-db-mysql-app-ingress-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "TLS from VPC",
            "from_port": 3306,
            "id": "sgrule-323244212",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e17387942e2e052f",
            "self": false,
            "source_security_group_id": "sg-013a5e657ed7f4a66",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_app-sg",
            "aws_security_group.terraform_db-sg",
            "aws_security_group.terraform_public-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-db-mysql-app-ingress-rule-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "TLS from VPC",
            "from_port": 3306,
            "id": "sgrule-1748784042",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e17387942e2e052f",
            "self": false,
            "source_security_group_id": "sg-0eaebf76f41ae90fc",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_db-sg",
            "aws_security_group.terraform_mgmt-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-mgmt-rdp-ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TLS from VPC",
            "from_port": 3389,
            "id": "sgrule-1659546243",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eaebf76f41ae90fc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_mgmt-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-mgmt-ssh-ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TLS from VPC",
            "from_port": 22,
            "id": "sgrule-590776431",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eaebf76f41ae90fc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_mgmt-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-sg-http-ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TLS from VPC",
            "from_port": 80,
            "id": "sgrule-586571276",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09520f027654bdec5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_public-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-sg-https-ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TLS from VPC",
            "from_port": 443,
            "id": "sgrule-1998719036",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09520f027654bdec5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_public-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_mgmt-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-00e82bcc9a9233bb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e82bcc9a9233bb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_mgmt-subnet-1"
            },
            "tags_all": {
              "Name": "terraform_mgmt-subnet-1"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_mgmt-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-053cd055a8920bbb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053cd055a8920bbb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_mgmt-subnet-2"
            },
            "tags_all": {
              "Name": "terraform_mgmt-subnet-2"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-09be2f72c70997311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be2f72c70997311",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_private-subnet-1"
            },
            "tags_all": {
              "Name": "terraform_private-subnet-1"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-07b54c4acb1fd3c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b54c4acb1fd3c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_private-subnet-2"
            },
            "tags_all": {
              "Name": "terraform_private-subnet-2"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-0be4f572f588ba81c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be4f572f588ba81c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_public-subnet-1"
            },
            "tags_all": {
              "Name": "terraform_public-subnet-1"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-0c4e8e53a3b533b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4e8e53a3b533b3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_public-subnet-2"
            },
            "tags_all": {
              "Name": "terraform_public-subnet-2"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_trusted-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-0fa060b29b94f9c03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa060b29b94f9c03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_trusted-subnet-1"
            },
            "tags_all": {
              "Name": "terraform_trusted-subnet-1"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_trusted-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:subnet/subnet-055fccaff87138fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055fccaff87138fc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116106230478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_trusted-subnet-2"
            },
            "tags_all": {
              "Name": "terraform_trusted-subnet-2"
            },
            "vpc_id": "vpc-0b6e8da452c4df56e"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116106230478:vpc/vpc-0b6e8da452c4df56e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4a4a8c2a0bf4cdc",
            "default_route_table_id": "rtb-0ba2cd1ece7c7f368",
            "default_security_group_id": "sg-07e9e211fb391208f",
            "dhcp_options_id": "dopt-03f19fe6f50bd5472",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b6e8da452c4df56e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba2cd1ece7c7f368",
            "owner_id": "116106230478",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}